# isye6740

./: .bash_history  .bashrc  .env  .gitignore  .python_history  .wget-hsts  Dockerfile  app.py  chainlit.config.json  chainlit.md  custom.js  doc_check.py  embed.py  faiss_index  groups.json  indexer.py  order.txt  pyproject.toml  requirements.txt  thread_cleaner.py  users.json
ed/: .env  Dockerfile  doc_maker.py  docker-compose.yml  ed_download.py  ed_helper.py  ed_raw.py  requirements.txt
faiss_indexer/: .env  faiss_indexer.py  index.faiss  index.pkl  json_faiss.py  json_loader(unecessary_complication).py  text_utils.py
helpers/: llm_loader.py  prompt_helper.py  rag_helper.py  usergroup.py
public/: style.css
templates/: admin.html  chat.html  dashboard.html  login.html
test/: thread_5939997_comment_13736410.txt  thread_5939997_comment_13736692.txt  thread_5939997_comment_13741445.txt  thread_5939997_comment_13852797.txt  thread_5940876_comment_13737774.txt  thread_5940876_comment_13737860.txt  thread_5940876_comment_13738484.txt  thread_5940876_comment_13739095.txt  thread_5940876_comment_13739457.txt  thread_5940876_comment_13739570.txt  thread_5940876_comment_13740084.txt  thread_5940876_comment_13740102.txt  thread_5940876_comment_13741155.txt  thread_5940876_comment_13741564.txt  thread_5940876_comment_13741760.txt  thread_5940876_comment_13742321.txt  thread_5940876_comment_13742488.txt  thread_5940876_comment_13742898.txt  thread_5940876_comment_13744015.txt  thread_5940876_comment_13744542.txt  thread_5940876_comment_13744827.txt  (+347 more)
threads/: 5939997.txt  (+87 more)
(+126 files in other folders)
