[project]
name = "isye6740"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "itsdangerous (>=2.2.0,<3.0.0)",
    "bitsandbytes (>=0.45.2,<0.46.0)",
    "pymupdf (>=1.25.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
